--- a/contact/thanks.html
+++ b/contact/thanks.html
@@ -199,7 +199,8 @@
     <div id="globalWrap">
 
 
-Merci de m'avoir contacté !
+<p style="text-align:center; margin: 20px; font-size: 200%;"><strong>Merci de m'avoir contacté !</strong></p>
+<p style="text-align:center; margin: 20px; font-size: 120%;"><a href="/">Retourner à l'accueil</a></p>
 
 
     </div>
