--- a/le-cache-des-blocks-sur-magento.html
+++ b/le-cache-des-blocks-sur-magento.html
@@ -631,6 +631,25 @@
 
 </div>
 
+
+
+
+  <script type="text/javascript">
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-27192340-2']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+</script>
+
+
+
+
+
 <script type="text/javascript" src="/js/jquery/cookies.js"></script>
     <div id="popin" class="monsieurbiz-popin" style="display: none;">
         <img src="/img/monsieurbiz.png" alt="" height="250" style="height: 250px;" />
