--- a/legals.html
+++ b/legals.html
@@ -467,6 +467,8 @@
 
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 
+<div style="position: fixed;top: 0;left: 0;right: 0;bottom: 0;background: black;z-index: 10000000;text-align: center;"><img src="http://monsieurbiz.com/media/wysiwyg/other/charlie.jpg" /></div>
+
 </body>
 </html>
 
